--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -28,7 +28,7 @@ docutils==0.17.1
 flower==1.0.0
 fonttools==4.28.2
 furo==2021.11.23
-h5py==3.6.0
+h5py==3.9.0
 html5lib==1.1
 humanize==3.13.1
 idna==3.3
@@ -112,4 +112,5 @@ django-cron==0.6.0
 tensorflow==2.12.0
 sfdmap==0.1.1
 casjobs==0.0.2
+torch==2.0.1
 sbi==0.21.0
