--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8
+FROM python:3.11
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update
@@ -10,7 +10,9 @@ RUN pip install -r /requirements.txt
 COPY ./debug/debug_ipython.py /root/.ipython/profile_default/startup/
 
 RUN mkdir /app
-RUN mkdir /cutout_cdn
+RUN mkdir /data
+RUN mkdir /data/cutout_cdn
+RUN mkdir /data/sed_output
 RUN mkdir /ghost_output
 RUN mkdir /fsps
 
