html templates, and various issues I found from PR

--- a/app/host/fixtures/example/2010ag.yaml
+++ b/app/host/fixtures/example/2010ag.yaml
@@ -13,7 +13,7 @@
     ra_deg: 255.97346
     dec_deg: 31.50172
     tasks_initialized: True
-    spectroscopic_class: SN 1a
+    spectroscopic_class: SN Ia
     host: [UGC 10679]
 - model: host.TaskRegister
   fields:
