--- a/data/sbipp/.gitattributes
+++ b/data/sbipp/.gitattributes
@@ -1,1 +1,2 @@
-sbi_phot.h5 filter=lfs diff=lfs merge=lfs -text
+sbi_phot_global.h5 filter=lfs diff=lfs merge=lfs -text
+sbi_phot_local.h5 filter=lfs diff=lfs merge=lfs -text
