--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -14,7 +14,7 @@ services:
       - ../data/dustmaps:/dustmaps
       - ../data/fsps/:/fsps
       - ../data/sbipp/:/sbipp
-      - ../data/.dustmapsrc:/root/.dustmapsrc
+###      - ../data/.dustmapsrc:/root/.dustmapsrc
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
