--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -10,14 +10,14 @@ on:
   push:
     branches: [main]
     paths:
-      - "app/Dockerfile"
+      - "app/Dockerfile_GitHub"
       - "app/requirements.txt"
     tags:
       - "*"
   pull_request:
     branches: [main]
     paths:
-      - "app/Dockerfile"
+      - "app/Dockerfile_GitHub"
       - "app/requirements.txt"
 
 jobs:
@@ -56,7 +56,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./app
-          file: ./app/Dockerfile
+          file: ./app/Dockerfile_GitHub
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           cache-from: type=gha
