--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -17,10 +17,10 @@ RUN mkdir /ghost_output
 RUN mkdir /fsps
 RUN mkdir /sbipp_phot
 
-RUN curl -LJO https://zenodo.org/records/10703208/files/sbi_phot_global.h5
-RUN curl -LJO https://zenodo.org/records/10703208/files/sbi_phot_local.h5
-RUN mv sbi_phot_global.h5 /sbipp_phot/
-RUN mv sbi_phot_local.h5 /sbipp_phot/
+### RUN curl -LJO https://zenodo.org/records/10703208/files/sbi_phot_global.h5
+### RUN curl -LJO https://zenodo.org/records/10703208/files/sbi_phot_local.h5
+### RUN mv sbi_phot_global.h5 /sbipp_phot/
+### RUN mv sbi_phot_local.h5 /sbipp_phot/
 
 RUN
 COPY . /app
