trying to get around storage limitations still

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,9 @@ jobs:
       - name: docker compose up
         run: |
           touch env/.env.dev
-          bash run/get_fsps_files.sh
+          mkdir data/fsps
+          touch data/fsps/README.md
+          ### bash run/get_fsps_files.sh
           bash run/get_sbi_files.sh
           bash run/blast.run.sh ci
       - uses: codecov/codecov-action@v3
