Use absolute paths to /data/cutout_cdn

--- a/app/host/fixtures/setup_test_cutout.yaml
+++ b/app/host/fixtures/setup_test_cutout.yaml
@@ -3,106 +3,106 @@
       name: [2010H_PanSTARRS_g]
       filter: [PanSTARRS_g]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/PanSTARRS/PanSTARRS_g.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [PanSTARRS_r]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/PanSTARRS/PanSTARRS_r.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [PanSTARRS_i]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/PanSTARRS/PanSTARRS_i.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [PanSTARRS_z]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [PanSTARRS_y]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/PanSTARRS/PanSTARRS_y.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [SDSS_u]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/SDSS/SDSS_u.fits
+      fits: /data/cutout_cdn/2010H/SDSS/SDSS_u.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [SDSS_r]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/SDSS/SDSS_r.fits
+      fits: /data/cutout_cdn/2010H/SDSS/SDSS_r.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [SDSS_i]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/SDSS/SDSS_i.fits
+      fits: /data/cutout_cdn/2010H/SDSS/SDSS_i.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [SDSS_z]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/SDSS/SDSS_z.fits
+      fits: /data/cutout_cdn/2010H/SDSS/SDSS_z.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [GALEX_NUV]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/GALEX/GALEX_NUV.fits
+      fits: /data/cutout_cdn/2010H/GALEX/GALEX_NUV.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [GALEX_FUV]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/GALEX/GALEX_FUV.fits
+      fits: /data/cutout_cdn/2010H/GALEX/GALEX_FUV.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [2MASS_J]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/2MASS/2MASS_J.fits
+      fits: /data/cutout_cdn/2010H/2MASS/2MASS_J.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [2MASS_H]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/2MASS/2MASS_H.fits
+      fits: /data/cutout_cdn/2010H/2MASS/2MASS_H.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [2MASS_K]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/2MASS/2MASS_K.fits
+      fits: /data/cutout_cdn/2010H/2MASS/2MASS_K.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [WISE_W1]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/WISE/WISE_W1.fits
+      fits: /data/cutout_cdn/2010H/WISE/WISE_W1.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [WISE_W2]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/WISE/WISE_W2.fits
+      fits: /data/cutout_cdn/2010H/WISE/WISE_W2.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [WISE_W3]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/WISE/WISE_W3.fits
+      fits: /data/cutout_cdn/2010H/WISE/WISE_W3.fits
 - model: host.Cutout
   fields:
       name: [2010H_PanSTARRS_g]
       filter: [WISE_W4]
       transient: [2010H]
-      fits: /../cutout_cdn/2010H/WISE/WISE_W4.fits
+      fits: /data/cutout_cdn/2010H/WISE/WISE_W4.fits
