--- a/app/host/fixtures/test/test_cutout.yaml
+++ b/app/host/fixtures/test/test_cutout.yaml
@@ -3,4 +3,4 @@
       name: testone_WISE_W4
       filter: [WISE_W4]
       transient: [2022testone]
-      fits: /../data/cutout_cdn/2010h/WISE/WISE_W4.fits
+      fits: /data/cutout_cdn/2010h/WISE/WISE_W4.fits
