--- a/app/host/fixtures/test/test_2010h.yaml
+++ b/app/host/fixtures/test/test_2010h.yaml
@@ -97,109 +97,109 @@
       name: 2010h_PanSTARRS_g
       filter: [PanSTARRS_g]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_g.fits
+      fits: /data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
   fields:
       name: 2010h_PanSTARRS_r
       filter: [PanSTARRS_r]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_r.fits
+      fits: /data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
   fields:
       name: 2010h_PanSTARRS_i
       filter: [PanSTARRS_i]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_i.fits
+      fits: /data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
   fields:
       name: 2010h_PanSTARRS_z
       filter: [PanSTARRS_z]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
+      fits: /data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
   fields:
       name: 2010h_PanSTARRS_y
       filter: [PanSTARRS_y]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_y.fits
+      fits: /data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
   fields:
       name: 2010h_SDSS_u
       filter: [SDSS_u]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_u.fits
+      fits: /data/cutout_cdn/2010h/SDSS/SDSS_u.fits
 - model: host.Cutout
   fields:
       name: 2010h_SDSS_r
       filter: [SDSS_r]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_r.fits
+      fits: /data/cutout_cdn/2010h/SDSS/SDSS_r.fits
 - model: host.Cutout
   fields:
       name: 2010h_SDSS_i
       filter: [SDSS_i]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_i.fits
+      fits: /data/cutout_cdn/2010h/SDSS/SDSS_i.fits
 - model: host.Cutout
   fields:
       name: 2010H_SDSS_z
       filter: [SDSS_z]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_z.fits
+      fits: /data/cutout_cdn/2010H/SDSS/SDSS_z.fits
 - model: host.Cutout
   fields:
       name: 2010h_GALEX_NUV
       filter: [GALEX_NUV]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_NUV.fits
+      fits: /data/cutout_cdn/2010h/GALEX/GALEX_NUV.fits
 - model: host.Cutout
   fields:
       name: 2010h_GALEX_FUV
       filter: [GALEX_FUV]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_FUV.fits
+      fits: /data/cutout_cdn/2010h/GALEX/GALEX_FUV.fits
 - model: host.Cutout
   fields:
       name: 2010h_2MASS_J
       filter: [2MASS_J]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_J.fits
+      fits: /data/cutout_cdn/2010h/2MASS/2MASS_J.fits
 - model: host.Cutout
   fields:
       name: 2010h_2MASS_H
       filter: [2MASS_H]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_H.fits
+      fits: /data/cutout_cdn/2010h/2MASS/2MASS_H.fits
 - model: host.Cutout
   fields:
       name: 2010h_2MASS_K
       filter: [2MASS_K]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_K.fits
+      fits: /data/cutout_cdn/2010h/2MASS/2MASS_K.fits
 - model: host.Cutout
   fields:
       name: 2010h_WISE_W1
       filter: [WISE_W1]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W1.fits
+      fits: /data/cutout_cdn/2010h/WISE/WISE_W1.fits
 - model: host.Cutout
   fields:
       name: 2010h_WISE_W2
       filter: [WISE_W2]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W2.fits
+      fits: /data/cutout_cdn/2010h/WISE/WISE_W2.fits
 - model: host.Cutout
   fields:
       name: 2010h_WISE_W3
       filter: [WISE_W3]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W3.fits
+      fits: /data/cutout_cdn/2010h/WISE/WISE_W3.fits
 - model: host.Cutout
   fields:
       name: 2010h_WISE_W4
       filter: [WISE_W4]
       transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W4.fits
+      fits: /data/cutout_cdn/2010h/WISE/WISE_W4.fits
 - model: host.Aperture
   fields:
       name: 2010h_PanSTARRS_g_global
