--- a/app/host/fixtures/example/2010h.yaml
+++ b/app/host/fixtures/example/2010h.yaml
@@ -7,7 +7,7 @@
     milkyway_dust_reddening: 0.026
 - model: host.Transient
   fields:
-    name: 2010h
+    name: 2010H
     tns_id: 3
     public_timestamp: 2010-01-16 00:00:00.000+00:00
     tns_prefix: SN
@@ -19,208 +19,208 @@
     tasks_initialized: True
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Transient MWEBV]
     status: [processed]
     last_modified: 1999-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 45.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host match]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 1.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host MWEBV]
     status: [processed]
     last_modified: 1998-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 35.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Cutout download]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 10.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host information]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 2.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Validate global photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Validate local photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global aperture construction]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Local aperture photometry]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 0.03
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global host SED inference]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 0.004
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Local host SED inference]
     status: [not processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 100.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Transient information]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 50.0
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_g
+      name: 2010H_PanSTARRS_g
       filter: [PanSTARRS_g]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_g.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_r
+      name: 2010H_PanSTARRS_r
       filter: [PanSTARRS_r]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_r.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_i
+      name: 2010H_PanSTARRS_i
       filter: [PanSTARRS_i]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_i.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_z
+      name: 2010H_PanSTARRS_z
       filter: [PanSTARRS_z]
-      transient: [2010h]
+      transient: [2010H]
       fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_y
+      name: 2010H_PanSTARRS_y
       filter: [PanSTARRS_y]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_y.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_u
+      name: 2010H_SDSS_u
       filter: [SDSS_u]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_u.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_u.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_r
+      name: 2010H_SDSS_r
       filter: [SDSS_r]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_r.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_r.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_i
+      name: 2010H_SDSS_i
       filter: [SDSS_i]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_i.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_i.fits
 - model: host.Cutout
   fields:
       name: 2010H_SDSS_z
       filter: [SDSS_z]
-      transient: [2010h]
+      transient: [2010H]
       fits: ../data/cutout_cdn/2010H/SDSS/SDSS_z.fits
 - model: host.Cutout
   fields:
-      name: 2010h_GALEX_NUV
+      name: 2010H_GALEX_NUV
       filter: [GALEX_NUV]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_NUV.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/GALEX/GALEX_NUV.fits
 - model: host.Cutout
   fields:
-      name: 2010h_GALEX_FUV
+      name: 2010H_GALEX_FUV
       filter: [GALEX_FUV]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_FUV.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/GALEX/GALEX_FUV.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_J
+      name: 2010H_2MASS_J
       filter: [2MASS_J]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_J.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_J.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_H
+      name: 2010H_2MASS_H
       filter: [2MASS_H]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_H.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_H.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_K
+      name: 2010H_2MASS_K
       filter: [2MASS_K]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_K.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_K.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W1
+      name: 2010H_WISE_W1
       filter: [WISE_W1]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W1.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W1.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W2
+      name: 2010H_WISE_W2
       filter: [WISE_W2]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W2.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W2.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W3
+      name: 2010H_WISE_W3
       filter: [WISE_W3]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W3.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W3.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W4
+      name: 2010H_WISE_W4
       filter: [WISE_W4]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W4.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W4.fits
 - model: host.Aperture
   fields:
-      name: 2010h_PanSTARRS_g_global
-      cutout: [2010h_PanSTARRS_g]
-      transient: [2010h]
+      name: 2010H_PanSTARRS_g_global
+      cutout: [2010H_PanSTARRS_g]
+      transient: [2010H]
       orientation_deg: 227.80
       ra_deg: 121.6004583
       dec_deg: 1.0359861
@@ -229,9 +229,9 @@
       type: global
 - model: host.Aperture
   fields:
-      name: 2010h_local
-      cutout: [2010h_PanSTARRS_g]
-      transient: [2010h]
+      name: 2010H_local
+      cutout: [2010H_PanSTARRS_g]
+      transient: [2010H]
       orientation_deg: 0.0
       ra_deg: 121.6015
       dec_deg: 1.03586
