--- a/app/host/fixtures/test/test_2010h.yaml
+++ b/app/host/fixtures/test/test_2010h.yaml
@@ -6,7 +6,7 @@
     dec_deg: 1.0359861
 - model: host.Transient
   fields:
-    name: 2010h
+    name: 2010H
     tns_id: 3
     public_timestamp: 2010-01-16 00:00:00.000+00:00
     tns_prefix: SN
@@ -17,194 +17,194 @@
     tasks_initialized: True
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Transient MWEBV]
     status: [not processed]
     last_modified: 1999-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 45.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host match]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 1.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host MWEBV]
     status: [not processed]
     last_modified: 1998-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 35.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Cutout download]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 10.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Host information]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 2.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global aperture photometry]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global aperture construction]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 11.2323
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Local aperture photometry]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 0.03
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Global host SED inference]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 0.004
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Local host SED inference]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 100.0
 - model: host.TaskRegister
   fields:
-    transient: [2010h]
+    transient: [2010H]
     task: [Transient information]
     status: [processed]
     last_modified: 2000-01-23 01:23:45.678+00:00
     last_processing_time_seconds: 50.0
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_g
+      name: 2010H_PanSTARRS_g
       filter: [PanSTARRS_g]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_g.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_g.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_r
+      name: 2010H_PanSTARRS_r
       filter: [PanSTARRS_r]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_r.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_r.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_i
+      name: 2010H_PanSTARRS_i
       filter: [PanSTARRS_i]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_i.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_i.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_z
+      name: 2010H_PanSTARRS_z
       filter: [PanSTARRS_z]
-      transient: [2010h]
+      transient: [2010H]
       fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_z.fits
 - model: host.Cutout
   fields:
-      name: 2010h_PanSTARRS_y
+      name: 2010H_PanSTARRS_y
       filter: [PanSTARRS_y]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/PanSTARRS/PanSTARRS_y.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/PanSTARRS/PanSTARRS_y.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_u
+      name: 2010H_SDSS_u
       filter: [SDSS_u]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_u.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_u.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_r
+      name: 2010H_SDSS_r
       filter: [SDSS_r]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_r.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_r.fits
 - model: host.Cutout
   fields:
-      name: 2010h_SDSS_i
+      name: 2010H_SDSS_i
       filter: [SDSS_i]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/SDSS/SDSS_i.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/SDSS/SDSS_i.fits
 - model: host.Cutout
   fields:
       name: 2010H_SDSS_z
       filter: [SDSS_z]
-      transient: [2010h]
+      transient: [2010H]
       fits: ../data/cutout_cdn/2010H/SDSS/SDSS_z.fits
 - model: host.Cutout
   fields:
-      name: 2010h_GALEX_NUV
+      name: 2010H_GALEX_NUV
       filter: [GALEX_NUV]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_NUV.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/GALEX/GALEX_NUV.fits
 - model: host.Cutout
   fields:
-      name: 2010h_GALEX_FUV
+      name: 2010H_GALEX_FUV
       filter: [GALEX_FUV]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/GALEX/GALEX_FUV.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/GALEX/GALEX_FUV.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_J
+      name: 2010H_2MASS_J
       filter: [2MASS_J]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_J.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_J.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_H
+      name: 2010H_2MASS_H
       filter: [2MASS_H]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_H.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_H.fits
 - model: host.Cutout
   fields:
-      name: 2010h_2MASS_K
+      name: 2010H_2MASS_K
       filter: [2MASS_K]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/2MASS/2MASS_K.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/2MASS/2MASS_K.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W1
+      name: 2010H_WISE_W1
       filter: [WISE_W1]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W1.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W1.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W2
+      name: 2010H_WISE_W2
       filter: [WISE_W2]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W2.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W2.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W3
+      name: 2010H_WISE_W3
       filter: [WISE_W3]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W3.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W3.fits
 - model: host.Cutout
   fields:
-      name: 2010h_WISE_W4
+      name: 2010H_WISE_W4
       filter: [WISE_W4]
-      transient: [2010h]
-      fits: ../data/cutout_cdn/2010h/WISE/WISE_W4.fits
+      transient: [2010H]
+      fits: ../data/cutout_cdn/2010H/WISE/WISE_W4.fits
 - model: host.Aperture
   fields:
-      name: 2010h_PanSTARRS_g_global
-      cutout: [2010h_PanSTARRS_g]
-      transient: [2010h]
+      name: 2010H_PanSTARRS_g_global
+      cutout: [2010H_PanSTARRS_g]
+      transient: [2010H]
       orientation_deg: 227.80
       ra_deg: 121.6004583
       dec_deg: 1.0359861
@@ -213,9 +213,9 @@
       type: global
 - model: host.Aperture
   fields:
-      name: 2010h_local
-      cutout: [2010h_PanSTARRS_g]
-      transient: [2010h]
+      name: 2010H_local
+      cutout: [2010H_PanSTARRS_g]
+      transient: [2010H]
       orientation_deg: 0.0
       ra_deg: 121.6015
       dec_deg: 1.03586
@@ -224,315 +224,315 @@
       type: local
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [PanSTARRS_g]
-      transient: [2010h]
+      transient: [2010H]
       flux: 66.48
       flux_error: 0.3
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [PanSTARRS_r]
-      transient: [2010h]
+      transient: [2010H]
       flux: 134.14
       flux_error: 0.35
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [PanSTARRS_i]
-      transient: [2010h]
+      transient: [2010H]
       flux: 199.2
       flux_error: 0.39
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [PanSTARRS_z]
-      transient: [2010h]
+      transient: [2010H]
       flux: 251.87
       flux_error: 0.87
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [PanSTARRS_y]
-      transient: [2010h]
+      transient: [2010H]
       flux: 318.33
       flux_error: 1.79
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [SDSS_u]
-      transient: [2010h]
+      transient: [2010H]
       flux: 24.5
       flux_error: 9.52
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [SDSS_r]
-      transient: [2010h]
+      transient: [2010H]
       flux: 265.28
       flux_error: 31.09
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [SDSS_i]
-      transient: [2010h]
+      transient: [2010H]
       flux: 406.41
       flux_error: 38.5
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [SDSS_z]
-      transient: [2010h]
+      transient: [2010H]
       flux: 537.61
       flux_error: 44.29
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [GALEX_NUV]
-      transient: [2010h]
+      transient: [2010H]
       flux: 1.27
       flux_error: 6.88
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [2MASS_J]
-      transient: [2010h]
+      transient: [2010H]
       flux: 1091.48
       flux_error: 130.38
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [2MASS_H]
-      transient: [2010h]
+      transient: [2010H]
       flux: 2183.8
       flux_error: 224.97
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [2MASS_K]
-      transient: [2010h]
+      transient: [2010H]
       flux: 2744.2
       flux_error: 321.52
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [WISE_W1]
-      transient: [2010h]
+      transient: [2010H]
       flux: 300.12
       flux_error: 76.95
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [WISE_W2]
-      transient: [2010h]
+      transient: [2010H]
       flux: 332.67
       flux_error: 164.67
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [WISE_W3]
-      transient: [2010h]
+      transient: [2010H]
       flux: 2095.17
       flux_error: 4138.78
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_local]
+      aperture: [2010H_local]
       filter: [WISE_W4]
-      transient: [2010h]
+      transient: [2010H]
       flux: 1196.85
       flux_error: 99386.74
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [PanSTARRS_g]
-      transient: [2010h]
+      transient: [2010H]
       flux: 11486.21
       flux_error: 6.74
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [PanSTARRS_r]
-      transient: [2010h]
+      transient: [2010H]
       flux: 22544.18
       flux_error: 7.45
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [PanSTARRS_i]
-      transient: [2010h]
+      transient: [2010H]
       flux: 32834.65
       flux_error: 9.23
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [PanSTARRS_z]
-      transient: [2010h]
+      transient: [2010H]
       flux: 40192.33
       flux_error: 21.9
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [PanSTARRS_y]
-      transient: [2010h]
+      transient: [2010H]
       flux: 51028.82
       flux_error: 46.89
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [SDSS_u]
-      transient: [2010h]
+      transient: [2010H]
       flux: 3836.16
       flux_error: 124.09
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [SDSS_r]
-      transient: [2010h]
+      transient: [2010H]
       flux: 40749.25
       flux_error: 387.75
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [SDSS_i]
-      transient: [2010h]
+      transient: [2010H]
       flux: 60157.54
       flux_error: 472.23
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [SDSS_z]
-      transient: [2010h]
+      transient: [2010H]
       flux: 78708.5
       flux_error: 541.32
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [GALEX_NUV]
-      transient: [2010h]
+      transient: [2010H]
       flux: 171.44
       flux_error: 94.73
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [2MASS_J]
-      transient: [2010h]
+      transient: [2010H]
       flux: 131353.83
       flux_error: 1394.29
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [2MASS_H]
-      transient: [2010h]
+      transient: [2010H]
       flux: 260596.03
       flux_error: 2474.14
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [2MASS_K]
-      transient: [2010h]
+      transient: [2010H]
       flux: 318604.53
       flux_error: 3663.86
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [WISE_W1]
-      transient: [2010h]
+      transient: [2010H]
       flux: 69285.33
       flux_error: 1264.35
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [WISE_W2]
-      transient: [2010h]
+      transient: [2010H]
       flux: 78341.46
       flux_error: 3323.04
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [WISE_W3]
-      transient: [2010h]
+      transient: [2010H]
       flux: 516932.66
       flux_error: 109896.85
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.AperturePhotometry
   fields:
-      aperture: [2010h_PanSTARRS_g_global]
+      aperture: [2010H_PanSTARRS_g_global]
       filter: [WISE_W4]
-      transient: [2010h]
+      transient: [2010H]
       flux: 326671.97
       flux_error: 2666271.5
       magnitude: 0.0
       magnitude_error: 0.0
 - model: host.SEDFittingResult
   fields:
-      transient: [2010h]
-      aperture: [2010h_PanSTARRS_g_global]
-      posterior: /sed_output/2010h/2010h_global.h5
+      transient: [2010H]
+      aperture: [2010H_PanSTARRS_g_global]
+      posterior: /sed_output/2010H/2010H_global.h5
       log_mass_16: 11.11623006468808
       log_mass_50: 11.119444597406906
       log_mass_84: 11.122195767038848
@@ -550,9 +550,9 @@
       log_tau_84: 0.1261118048050916
 - model: host.SEDFittingResult
   fields:
-      transient: [2010h]
-      aperture: [2010h_local]
-      posterior: /sed_output/2010h/2010h_local.h5
+      transient: [2010H]
+      aperture: [2010H_local]
+      posterior: /sed_output/2010H/2010H_local.h5
       log_mass_16: 8.849994109986605
       log_mass_50: 8.894097969541852
       log_mass_84: 8.96004598530449
