Replace remaining instances of 2010h with 2010H

--- a/.gitignore
+++ b/.gitignore
@@ -144,16 +144,16 @@ data/*
 !data/cutout_cdn/
 !data/transmission/
 data/cutout_cdn/*
-!data/cutout_cdn/2010h/
-data/cutout_cdn/2010h/*
+!data/cutout_cdn/2010H/
+data/cutout_cdn/2010H/*
 !data/cutout_cdn/2010ag/
 data/cutout_cdn/2010ag/*
 !data/cutout_cdn/2010ai/
 data/cutout_cdn/2010ai/*
-!data/cutout_cdn/2010h/*
+!data/cutout_cdn/2010H/*
 !data/cutout_cdn/2010ag/*
 !data/cutout_cdn/2010ai/*
-!data/sed_output/2010h/*
+!data/sed_output/2010H/*
 
 static/
 
