Add data init script triggered by INITIALIZE_DATA env var

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,17 @@
 FROM python:3.11
 ENV PYTHONUNBUFFERED 1
 
-RUN apt-get update
-RUN apt-get install ffmpeg libsm6 libxext6 gfortran libhealpix-cxx-dev libhdf5-serial-dev netcdf-bin libnetcdf-dev -y
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive && apt-get install -y --no-install-recommends \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
+    gfortran \
+    libhealpix-cxx-dev \
+    libhdf5-serial-dev \
+    netcdf-bin \
+    libnetcdf-dev \
+    rsync \
+    && rm -rf /var/lib/apt/list/*
 
 COPY ./requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt --no-cache-dir
@@ -16,6 +25,5 @@ RUN mkdir /data/sed_output
 RUN mkdir /ghost_output
 RUN mkdir /fsps
 
-RUN
 COPY . /app
 WORKDIR /app
