--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -24,9 +24,8 @@ services:
     ports:
       - 80:${WEB_SERVER_PORT}
   database_base:
-    image: mysql:5.7
+    image: mariadb:10
     platform: linux/x86_64
-    command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - 3306:${DATABASE_PORT}
