Align local dev init script with Kubernetes deployment.
Use Docker named volume for astro data.
Optionally download required astro data within container.
Use .initialized check file to bypass init scripts when app container
starts.

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -53,3 +53,6 @@ OUTPUT_CSV=../batch/results.csv
 
 #Cutout settings, false if cutouts shouldn't be re download, True if they should
 CUTOUT_OVERWRITE = False
+
+# If required data sources are missing, attempt to download them to their respective directories.
+INITIALIZE_DATA = "true"
