--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,9 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: docker compose up
         run: |
-          touch env/.env.dev
-          bash run/get_fsps_files.sh
-          bash run/get_sbi_files.sh
+          # Ensure .env.dev exists for valid Docker Compose config
+          cp env/.env.dev.example env/.env.dev
           bash run/blast.run.sh ci
       - uses: codecov/codecov-action@v3
         with:
