Support downloading astro data from self-hosted archive file

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -56,3 +56,7 @@ CUTOUT_OVERWRITE = False
 
 # If required data sources are missing, attempt to download them to their respective directories.
 INITIALIZE_DATA = "true"
+
+DATA_ARCHIVE = "blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz"
+USE_DATA_ARCHIVE="true"
+FORCE_DATA_DOWNLOAD="false"
