--- a/env/.env.default
+++ b/env/.env.default
@@ -1,7 +1,7 @@
 # Transient Name Server credentials
-TNS_BOT_API_KEY=
-TNS_BOT_ID=
-TNS_BOT_NAME=
+TNS_BOT_API_KEY =
+TNS_BOT_ID =
+TNS_BOT_NAME =
 
 # MySQL Database
 MYSQL_DATABASE = blast_db
@@ -14,7 +14,7 @@ DJANGO_SECRET_KEY =
 DJANGO_DEBUG =
 DJANGO_SUPERUSER_PASSWORD = password
 DJANGO_SUPERUSER_USERNAME = admin
-DJANGO_SUPERUSER_EMAIL = test@gamil.com
+DJANGO_SUPERUSER_EMAIL = test@example.com
 
 # RabbitMQ
 RABBITMQ_USERNAME = guest
@@ -36,7 +36,7 @@ FLOWER_HOST = flower
 SPS_HOME = /fsps
 
 #blast image
-BLAST_IMAGE = blast_latest
+BLAST_IMAGE = blast_base
 
 #FSPS env
 SPS_HOME = /fsps
@@ -47,16 +47,18 @@ API_AUTHENTICATION = AllowAny
 ALLOW_API_POST = YES
 
 #Batch mode
-BATCH_CSV=../batch/example_input.csv
-OUTPUT_CSV=../batch/results.csv
+BATCH_CSV = ../batch/example_input.csv
+OUTPUT_CSV = ../batch/results.csv
 
 
 #Cutout settings, false if cutouts shouldn't be re download, True if they should
 CUTOUT_OVERWRITE = False
 
 # If required data sources are missing, attempt to download them to their respective directories.
-INITIALIZE_DATA = "true"
-
-DATA_ARCHIVE = "blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz"
-USE_DATA_ARCHIVE="true"
-FORCE_DATA_DOWNLOAD="false"
+INITIALIZE_DATA = true
+FORCE_DATA_DOWNLOAD = false
+USE_DATA_ARCHIVE = true
+DATA_ARCHIVE_FILE = blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz
+DATA_ARCHIVE_FILE_URL = "https://js2.jetstream-cloud.org:8001/swift/v1/blast-astro-data/${DATA_ARCHIVE_FILE}"
+# If USE_LOCAL_ARCHIVE_FILE is true, the DATA_ARCHIVE_FILE must be mounted in /tmp
+USE_LOCAL_ARCHIVE_FILE = false
