Refactor initialization scripts for speed and idempotency
- Support installation from local or downloaded astro data archive file.
- Use settings_slim.py to reduce Python import time for tasks that do
not need the "host" app.
- Make entire init process idempotent with changes to Django
createsuperuser and PeriodicTask creation scripts.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -154,10 +154,12 @@ services:
     extends:
       file: docker-compose.blast_base.yml
       service: ${BLAST_IMAGE}
-    command: bash entrypoints/docker-entrypoint.app.dev.sh
+    command: bash entrypoints/docker-entrypoint.app.sh
     ports:
       - 8000:${WEB_APP_PORT}
     profiles: ["full_dev", "slim_dev", "batch"]
+    environment:
+      - "DEV_MODE=1"
     env_file:
       - path: ../env/.env.default
         required: true
