Restore BLAST_IMAGE = blast_latest default

--- a/env/.env.default
+++ b/env/.env.default
@@ -36,7 +36,7 @@ FLOWER_HOST = flower
 SPS_HOME = /fsps
 
 #blast image
-BLAST_IMAGE = blast_base
+BLAST_IMAGE = blast_latest
 
 #FSPS env
 SPS_HOME = /fsps
@@ -55,7 +55,6 @@ OUTPUT_CSV = ../batch/results.csv
 CUTOUT_OVERWRITE = False
 
 # If required data sources are missing, attempt to download them to their respective directories.
-INITIALIZE_DATA = true
 FORCE_DATA_DOWNLOAD = false
 USE_DATA_ARCHIVE = true
 DATA_ARCHIVE_FILE = blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz
