Refactor env_file config to support GitHub CI workflow constraints
Workflow fails due to:
+ docker compose --profile ci --project-name blast -f
docker/docker-compose.yml --env-file env/.env.default up --build
--exit-code-from app_ci
validating /home/runner/work/blast/blast/docker/docker-compose.yml:
services.app.env_file.0 must be a string

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,7 +17,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: docker compose up
         run: |
-          bash run/blast.run.sh ci
+          docker compose \
+            --profile ci \
+            --project-name blast \
+            -f docker/docker-compose.yml \
+            --env-file env/.env.default \
+            --env-file env/.env.ci \
+            up --build --exit-code-from app_ci
+
       - uses: codecov/codecov-action@v4
         with:
           directory: app/
