--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -14,10 +14,8 @@ services:
       - django-static:/app/static
       #- ../blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz:/tmp/blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz
     env_file:
-      - path: ../env/.env.default
-        required: true
-      - path: ../env/.env.dev
-        required: false
+      - ../env/.env.default
+      - ../env/.env.dev
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
@@ -27,10 +25,8 @@ services:
     ports:
       - 80:${WEB_SERVER_PORT}
     env_file:
-      - path: ../env/.env.default
-        required: true
-      - path: ../env/.env.dev
-        required: false
+      - ../env/.env.default
+      - ../env/.env.dev
   database_base:
     image: mariadb:10
     platform: linux/x86_64
@@ -38,17 +34,13 @@ services:
     ports:
       - 3306:${DATABASE_PORT}
     env_file:
-      - path: ../env/.env.default
-        required: true
-      - path: ../env/.env.dev
-        required: false
+      - ../env/.env.default
+      - ../env/.env.dev
   blast_latest:
     image: ghcr.io/astrophpeter/blast:latest
     env_file:
-      - path: ../env/.env.default
-        required: true
-      - path: ../env/.env.dev
-        required: false
+      -  ../env/.env.default
+      -  ../env/.env.dev
     volumes:
       - ../app:/app
       - ./dustmapsrc:/tmp/.dustmapsrc:ro
