--- a/env/.env.default
+++ b/env/.env.default
@@ -61,3 +61,5 @@ DATA_ARCHIVE_FILE = blast-data.b64b805c44cec50d1d0503e7d10349881ace7456.tar.gz
 DATA_ARCHIVE_FILE_URL = "https://js2.jetstream-cloud.org:8001/swift/v1/blast-astro-data/${DATA_ARCHIVE_FILE}"
 # If USE_LOCAL_ARCHIVE_FILE is true, the DATA_ARCHIVE_FILE must be mounted in /tmp
 USE_LOCAL_ARCHIVE_FILE = false
+
+SILKY_PYTHON_PROFILER = false
