Update to bootstrap4 and use POST request for logout
Django v5 no longer supports GET request log out actions.

--- a/app/requirements.dev.txt
+++ b/app/requirements.dev.txt
@@ -4,7 +4,8 @@ Django
 django-silk
 django-crispy-forms
 django-tables2
-django-bootstrap3
+django-bootstrap4
+crispy-bootstrap4
 django-celery-beat
 django-revproxy
 djangorestframework
