--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,7 +4,8 @@ Django==5.0.4
 django-silk==5.1.0
 django-crispy-forms==2.1
 django-tables2==2.7.0
-django-bootstrap3==24.2
+django-bootstrap4==24.3
+crispy-bootstrap4==2024.1
 django-celery-beat==2.6.0
 django-revproxy==0.12.0
 djangorestframework==3.15.1
