Define blast_ci service for continuous-integration workflow

--- a/docker/docker-compose.blast_base.yml
+++ b/docker/docker-compose.blast_base.yml
@@ -16,6 +16,15 @@ services:
     env_file:
       - ../env/.env.default
       - ../env/.env.dev
+  blast_ci:
+    image: blast:dev
+    volumes:
+      - ./dustmapsrc:/tmp/.dustmapsrc:ro
+      - blast-data:/mnt/data
+      - django-static:/app/static
+    env_file:
+      - ../env/.env.default
+      - ../env/.env.ci
   nginx_base:
     restart: always
     image: nginx:1.21-alpine
@@ -31,6 +40,8 @@ services:
     image: mariadb:10
     platform: linux/x86_64
     restart: always
+    volumes:
+      - blast-db:/var/lib/mysql/
     ports:
       - 3306:${DATABASE_PORT}
     env_file:
